# rocket-api-tutorial

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
deploy/: nginx.conf  systemd.service
migrations/2023-03-11-114257_create_heroes/: up.sql
src/: auth.rs  main.rs  models.rs  repositories.rs  schema.rs
