[package]
name = "rocket-api-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde_json = "1.0.64"
base64 = "0.20.0"
diesel = { version = "1.4.6", features = ["sqlite", "r2d2"] }

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
deafult-features = false
features = ["diesel_sqlite_pool"]
